--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,23 +18,23 @@ jobs:
                   npm install
                   npm run build
 
-            - name: Setup SSH
-              run: |
-                  mkdir -p ~/.ssh
-                  echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-                  chmod 600 ~/.ssh/id_rsa
-                  ssh-keyscan -H $SSH_HOST >> ~/.ssh/known_hosts
-              env:
-                  SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-                  SSH_HOST: ${{ secrets.SSH_HOST }}
-
-            - name: Deploy to EC2
-              run: |
-                  ssh $SSH_USER@$SSH_HOST "cd $WORK_DIR && git pull origin main && npm install && npm run build"
-              env:
-                  SSH_USER: ${{ secrets.SSH_USER }}
-                  SSH_HOST: ${{ secrets.SSH_HOST }}
-                  WORK_DIR: ${{ secrets.WORK_DIR }}
-
-            - name: Cleanup SSH key
-              run: rm -rf ~/.ssh
+#            - name: Setup SSH
+#              run: |
+#                  mkdir -p ~/.ssh
+#                  echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+#                  chmod 600 ~/.ssh/id_rsa
+#                  ssh-keyscan -H $SSH_HOST >> ~/.ssh/known_hosts
+#              env:
+#                  SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#                  SSH_HOST: ${{ secrets.SSH_HOST }}
+#
+#            - name: Deploy to EC2
+#              run: |
+#                  ssh $SSH_USER@$SSH_HOST "cd $WORK_DIR && git pull origin main && npm install && npm run build"
+#              env:
+#                  SSH_USER: ${{ secrets.SSH_USER }}
+#                  SSH_HOST: ${{ secrets.SSH_HOST }}
+#                  WORK_DIR: ${{ secrets.WORK_DIR }}
+#
+#            - name: Cleanup SSH key
+#              run: rm -rf ~/.ssh
