--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,20 +21,13 @@ jobs:
             - name: Setup SSH
               run: |
                   mkdir -p ~/.ssh
-                  echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+                  echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
                   chmod 600 ~/.ssh/id_rsa
-                  ssh-keyscan -H $SSH_HOST >> ~/.ssh/known_hosts
-              env:
-                  SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-                  SSH_HOST: ${{ secrets.SSH_HOST }}
+                  ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
             - name: Deploy to EC2
               run: |
-                  ssh $SSH_USER@52.47.133.2 "cd $WORK_DIR && git pull origin main && npm install && npm run build"
-              env:
-                  SSH_USER: ${{ secrets.SSH_USER }}
-                  SSH_HOST: ${{ secrets.SSH_HOST }}
-                  WORK_DIR: ${{ secrets.WORK_DIR }}
+                  ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git pull origin main && npm install && npm run build"
 
             - name: Cleanup SSH key
               run: rm -rf ~/.ssh
