--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - .:/app
-    environment:
-      - NODE_ENV=production
+      - ./src:/app/src
+      - ./public:/app/public
     restart: always
